Revision history for Perl extension Alien::wxWidgets.

0.32
	- Correctly handle flags for wxWidgets Universal Mac builds.
	- Allow building a monolithic wxWidgets.
	- Updated bundled Archive::Extract to the latest version.

0.31  Sat Mar 24 17:25:25 CET 2007
	- Patch and build wxWidgets 2.8.3.
	- Automatically link in C++ runtime for MSVC 7.0 and above.

0.30  Sun Mar 18 16:47:23 CET 2007
	- Fetch and build wxWidgets 2.8.2.

0.29  Fri Mar 16 20:11:31 CET 2007
	- Must require Perl 5.006, not 5.6.

0.28  Sat Mar 10 21:41:32 CET 2007
	- Release 0.27_51 as the new stable version.

0.27_51  Sun Feb 25 22:54:07 CET 2007
	- Fetch and build wxWidgets 2.8.1.

0.27_50  Sun Feb 25 22:39:43 CET 2007
	- Fetch and build wxWidgets 2.8.0.
	- Update bundled modules to the latest version.

0.27  Tue Dec 19 23:04:41 CET 2006
	- Support monolithic wxWidgets builds.

0.26  Sat Dec 16 19:42:57 CET 2006
	- Improve error reporting for missing libraries.

0.25  Sun Nov  5 18:39:22 CET 2006
	- Add aui and richtest to the wxWidgets libraries
	  searched with wx-config.

0.24  Fri Oct 20 21:27:57 CEST 2006
	- Add an option for disabling OpenGL support when building
	  wxWidgets.

0.23  Thu Oct 19 21:41:16 CEST 2006
	- Use a smart default for the "Do you want to build
          wxWidgets?" question.

0.22  Tue Oct  3 20:30:48 CEST 2006
	- Fixed a bug in detecting an installed wxWidgets in /usr/lib64 in
	  x86_64 systems. (patch by Jose Pedro Oliveira)
	- When fetching wxWidgets, print the download URL.

0.21  Sun Aug 27 17:17:56 CEST 2006
	- Check that the build environment is sane under Win32.

0.20  Tue Aug 15 17:45:12 CEST 2006
	- Bundle and use the patch implementation from GNU under Windows;
	  the PPT implementation is way too fragile.

0.19  Sun Jul 16 15:46:11 CEST 2006
	- Fixes for when the compiler user for building is not in
	  the PATH when installing.

0.18  Sun Jul  9 12:31:44 CEST 2006
	- Restored compatibility with wxWidgets 2.4 where it uses
	  configure/wx-config.
